<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvptitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parner"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPartnerChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvptitle"/>

        <TextView
            android:id="@+id/tvdtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionChart"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPartnerChart"/>

        <TextView
            android:id="@+id/tvdescriptionChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvdtitle"/>

        <TextView
            android:id="@+id/tvvtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valueChart"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvdescriptionChart"
            />

        <TextView
            android:id="@+id/tvValueChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvvtitle"/>

        <TextView
            android:id="@+id/tvttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeChart"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvValueChart"/>

        <TextView
            android:id="@+id/tvTypeChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvttitle"/>

        <TextView
            android:id="@+id/tvDateChartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTypeChart"/>

        <TextView
            android:id="@+id/tvDateChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateChartTitle"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechartTransaction"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/tvDateChart"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>