<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="18dip">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/partnerContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPartner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/partner_required2"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/revenue_expenditure"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/partnerContainer" />

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChoice" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spCategory">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/value_required"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/valueContainer">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/descriptionDialog"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>



        <DatePicker
            android:id="@+id/dpDatePicker"
            android:calendarViewShown="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_weight="1"
            android:datePickerMode="spinner"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionContainer"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>